# SENTINEL

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TESTING.md  docker-compose.yml
.github/workflows/: ci.yml
analyzer/: Dockerfile  requirements.txt
analyzer/sentinel/: __init__.py  engine.py
analyzer/sentinel/detectors/: __init__.py  bridge_analyzer.py  mev_detector.py  proxy_checker.py
analyzer/sentinel/integrations/: __init__.py  slither_integration.py
analyzer/sentinel/reports/: __init__.py  audit_report.py
analyzer/sentinel/verification/: __init__.py  formal_verification.py
analyzer/src/: analyzer.py  server.py
api/: .golangci.yml  Dockerfile  go.mod
api/cmd/server/: main.go
config/: .env.example
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: BatchRevokeYul.yul  SentinelRegistry.sol
contracts/test/: SentinelRegistry.extended.t.sol  SentinelRegistry.fuzz.t.sol
db/: init.sql
decompiler/: Cargo.toml  Dockerfile
decompiler/src/: main.rs  server.rs
docs/: API.md  ARCHITECTURE.md  TESTING.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
scripts/: find_free_apis.py
tests/go/: benchmark_test.go  comprehensive_test.go  fuzz_comprehensive_test.go  fuzz_test.go  main_integration_test.go  main_test.go  mega_fuzz_test.go
tests/python/: conftest.py  test_analyzer.py  test_comprehensive.py  test_edge_cases.py  test_fuzz.py  test_fuzzing.py  test_integration.py  test_mega_fuzzing.py  test_pro_features.py  test_standalone.py
tests/rust/: extended_tests.rs  tests.rs
tests/solidity/: Comprehensive.t.sol  SentinelRegistry.gas.t.sol  SentinelRegistry.invariant.t.sol  SentinelRegistry.security.t.sol  SentinelRegistry.t.sol
(+14 files in other folders)
