# ═══════════════════════════════════════════════════════════════════════════════
#  ██████╗ ███████╗███╗   ██╗████████╗██╗███╗   ██╗███████╗██╗
# ██╔════╝ ██╔════╝████╗  ██║╚══██╔══╝██║████╗  ██║██╔════╝██║
# ███████╗ █████╗  ██╔██╗ ██║   ██║   ██║██╔██╗ ██║█████╗  ██║
# ╚════██║ ██╔══╝  ██║╚██╗██║   ██║   ██║██║╚██╗██║██╔══╝  ██║
# ███████║ ███████╗██║ ╚████║   ██║   ██║██║ ╚████║███████╗███████╗
# ╚══════╝ ╚══════╝╚═╝  ╚═══╝   ╚═╝   ╚═╝╚═╝  ╚═══╝╚══════╝╚══════╝
#
#  SENTINEL SHIELD - EVM Bytecode Decompiler

# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "sentinel-decompiler"
version = "0.1.0"
edition = "2021"
authors = ["SENTINEL Team"]
description = "High-performance EVM bytecode decompiler for security analysis"
license = "MIT"
repository = "https://github.com/sentinel"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# EVM & Crypto
alloy-primitives = "0.6"
revm = "7.0"
hex = "0.4"
sha3 = "0.10"

# Async & HTTP
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
petgraph = "0.6"  # For control flow graph
indexmap = "2.0"
bitvec = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bin]]
name = "sentinel-decompile"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
debug = true
